# cpp-http-server

./: .gitignore  CMakeLists.txt  Makefile  README.md  version_check.cpp
docker/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  docker-compose.yml
docker/db/conf/: my.conf
docker/db/init.d/: entrypoint.sh
docker/db/init.d/templates/: create_template.sql
src/: server.cpp
src/aliases/: http_aliases.h
src/config/: config.cpp  config.h
src/core/: ThreadPool.h  mysql.cpp  mysql.h
src/routes/include/: default.h  handler.h  path1.h  path2.h
src/routes/src/: default.cpp  handler.cpp  path1.cpp  path2.cpp
